--- a/Home.html
+++ b/Home.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
         <link href= "./css/main.css" rel = "stylesheet" type = "text/css"/>
-		<title>Home Page</title> /!---basic start to html---!/
+		<title>Home Page</title>
 	</head>
 	<body>
         <div class="container">
@@ -11,15 +11,12 @@
 				    <h1><strong>Home page</strong></h1>
             </header>
             <div id="nav">
-                <ul>
-                    <div class="btn">Home </div>
-                    <div class="btn">Intrest</div>
-                    <div class="btn">Contact info</div>
-                    <div class="btn"> </div>
+                <ul id="btn">
+                    <li><a href="Home.html"> Home</a></li>
+                    <li><a href="Interest.html">Interest</a></li>
+                    <li><a href="Contact.html"> Contact info</a></li>
+                    <li><a href="projects.html"> Projects</a></li>
                 </ul>
-            </div>
-            <div id="home_photo">
-            
             </div>
         </div>
 	</body>
