--- a/Interest.html
+++ b/Interest.html
@@ -12,9 +12,9 @@
             </header>
             <div id="nav">
                 <ul id="btn">
-                    <li><a href="Home.html"> Home</a></li>
-                    <li><a href="Interest.html">Interest</a></li>
-                    <li><a href="Contact.html"> Contact info</a></li>
+                    <li><a href="index.html"> Home</a></li>
+                    <li><a href="interest.html">Interest</a></li>
+                    <li><a href="contact.html"> Contact info</a></li>
                     <li><a href="projects.html"> Projects</a></li>
                 </ul>
             </div>
