--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 						<div class="carousel-inner" role="listbox"> <!--Carousel images.-->
 							<div class="item active">
-								<img src="pictures/sun1.JPG" alt="sun1">
+								<img src="pictures/sun1.jpg" alt="sun1">
 							</div>	
 						
 							<div class="item">
