--- a/index.html
+++ b/index.html
@@ -11,16 +11,13 @@
 </head>
 <body>   
     <nav role="navigation">
-        <div id="nav-title">
-            <p>Santigre.io</p>
-        </div>
         <div class="sub-menu-parent">
             <a href="#">Menu</a>
             <ul class="nav-links">
-                <li><a href="index.html">home</a></li>
-                <li><a href="page1.html">page1</a></li>
-                <li><a href="page2.html">page2</a></li>
-                <li><a href="page3.html">page3</a></li>
+                <li class="link"><a href="index.html">home</a></li>
+                <li class="link"><a href="page1.html">page1</a></li>
+                <li class="link"><a href="page2.html">page2</a></li>
+                <li class="link"><a href="page3.html">page3</a></li>
             </ul>
         </div>
     </nav>
