--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Home Page</title>
     <meta charset="utf-8">
     <link href="./css/main.css" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link rel="shortcut icon" href="#" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
@@ -14,16 +15,21 @@
         <div class="sub-menu-parent">
             <a href="#">Menu</a>
             <ul class="nav-links">
-                <li class="link"><a href="index.html">home</a></li>
-                <li class="link"><a href="page1.html">page1</a></li>
+                <li class="link"><a href="index.html">Top</a></li>
+                <li class="link"><a href="page1.html">About</a></li>
                 <li class="link"><a href="page2.html">page2</a></li>
                 <li class="link"><a href="page3.html">page3</a></li>
             </ul>
         </div>
     </nav>
     <div id= "parallax1">
-        <div id="intro-content">
-            <h1>Santiago Beltran<br/>Aspiring Web Developer</h1>
+        <div class="content">
+            <h1 id="intro">Santiago Beltran<br/>Aspiring Web Developer</h1>
+        </div>
+    </div>
+    <div id= "parallax2">
+        <div class="content">
+            <h1>About Me</h1>
         </div>
     </div>
 </body>
