--- a/Index.html
+++ b/Index.html
@@ -1,22 +1,4 @@
-﻿<?php
-
-
-if(isset($_POST["submit"])) {
-	$name= $_POST["name"];
-	$subject= $_POST["subject"]
-	$emailFrom= $_POST["mail"];
-	$message= $_POST["message"];
-
-    $recipient= "Oruga.95@hotmail.com";
-	$headers ="From: ".$emailFrom;
-	$txt = "You have received an email from ".$name.".\n\n".$message;
-
-	mail($recipient, $subject, $txt, $headers);
-	header("Location: index.php?mailsend");
-}
-?>
-
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
@@ -91,7 +73,7 @@ if(isset($_POST["submit"])) {
             <div id="Contact">
                 <h1>Contact</h1>
                 <div class="container" id="formHolder">
-                    <form method="post" action="index.php">
+                    <form method="post" action="scripts/contact.php">
                         <label for="fname">Full name</label>
                         <input type="text" name="name" placeholder="Full name" />
 
