--- a/Index.html
+++ b/Index.html
@@ -73,7 +73,7 @@
             <div id="Contact">
                 <h1>Contact</h1>
                 <div class="container" id="formHolder">
-                    <form method="post" action="scripts/contact.php">
+                    <form method="post" action="contact.php">
                         <label for="fname">Full name</label>
                         <input type="text" name="name" placeholder="Full name" />
 
