--- a/Index.html
+++ b/Index.html
@@ -1,4 +1,20 @@
-﻿<!DOCTYPE html>
+﻿<?php
+if(isset($_POST["submit"])) {
+	$name= $_POST["name"];
+    $emailFrom= $_POST["email"];
+	$subject= $_POST["subject"];
+	$message= $_POST["message"];
+
+    $recipient= "Oruga.95@hotmail.com";
+	$headers ="From: "$emailFrom;
+	$txt = "You have received an email from ".$name.".\n\n".$message;
+
+	mail($recipient, $subject, $txt, $headers);
+	header("Location: Index.html?mailsend");
+}
+?>
+
+<!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
@@ -74,7 +90,7 @@
             <div id="Contact">
                 <h1>Contact</h1>
                 <div class="container" id="formHolder">
-                    <form method="post" action="scripts/contact.php">
+                    <form method="post" action="contact.php">
                         <label for="fname">Full name</label>
                         <input type="text" name="name" placeholder="Full name" />
 
