--- a/Index.html
+++ b/Index.html
@@ -88,6 +88,13 @@
 
                         <input type="submit" value="Submit"/>
                     </form>
+                    <script language="JavaScript">
+                    // Code for validating the form
+                    var frmvalidator  = new Validator("myemailform");
+                    frmvalidator.addValidation("name","req","Please provide your name"); 
+                    frmvalidator.addValidation("email","req","Please provide your email"); 
+                    frmvalidator.addValidation("email","email","Please enter a valid email address"); 
+                    </script>
                 </div>
             </div>
         </div>
